--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="night">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -18,9 +18,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- fav icon  -->
-  <link rel="icon" href="./jobs.png" type="image/x-icon">
   
+    <!-- fav icon  -->
+  <link rel="icon" href="./jobs.png" type="image/x-icon">
+
   <style>
     body {
       font-family: "Geist", sans-serif;
