add no data section & connect script.js file

--- a/index.html
+++ b/index.html
@@ -311,7 +311,19 @@
         </div>
       </div>
 
-      
+      <!-- No data section  -->
+      <div id="no-data"
+        class="hidden flex flex-col items-center justify-center py-20 bg-white rounded-xl border border-gray-100">
+        <img src="./jobs.png" alt="" class="w-20 mb-4">
+        <h3 class="text-2xl font-bold">No jobs available</h3>
+        <p class="text-gray-400 mt-2">Check back soon for new job opportunities</p>
+      </div>
+    </div>
+
+    <script src="./script.js"></script>
   </body>
+
+</html>
+</body>
 
 </html>
