--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+  
+    <!-- fav icon  -->
+  <link rel="icon" href="https://img.icons8.com/?size=80&id=a2BX0RQaENGq&format=png" type="image/x-icon">
+  
   <style>
     body {
       font-family: "Geist", sans-serif;
